[gd_scene load_steps=3 format=3 uid="uid://j7sli074se1o"]

[ext_resource type="PackedScene" uid="uid://b2obq0cwg452y" path="res://Objects/Effects/Effect.tscn" id="1_t76ig"]
[ext_resource type="Script" path="res://Objects/Effects/ShieldCircle/ShieldCircle.gd" id="2_rfy06"]

[node name="ShieldCircle" instance=ExtResource("1_t76ig")]
script = ExtResource("2_rfy06")
speed = 1.0
defense_shield_distance = Vector3(0, 1.3, 1.5)
agility_shield_distance = Vector3(0, 1.3, 1)
duration = 0.0

[node name="Pivot" type="Node3D" parent="." index="1"]

[node name="ShieldRegenerationTimer" type="Timer" parent="." index="2"]
one_shot = true

[connection signal="timeout" from="ShieldRegenerationTimer" to="." method="_on_shield_regeneration_timer_timeout"]
